# db2vec

./: .env-example  .gitignore  Cargo.toml  DOCKER_SETUP.md  README.md  dockerfile  dump.sql  milvus-docker-compose.yml  mssql_sample.sql  mysql_sample.sql  oracle_sample.sql  postgres_sample.sql  sqlite_sample.sql
.cargo/: config.toml
assets/: db2vec_screenshot
config/: exclude.json
docs/: COMPATIBLE.md  DOCKER_SETUP.md  OPTION.md  TEI.md
samples/: mysql_sample.sql  oracle_sample.sql  sqlite_sample.sql  surreal_sample.surql
src/: lib.rs  main.rs  workflow.rs
src/cli/: mod.rs
src/db/: chroma.rs  milvus.rs  mod.rs  pinecone.rs  qdrant.rs  redis.rs  surreal.rs
src/embedding/: embeding.rs  mod.rs
src/embedding/models/: google.rs  mod.rs  ollama.rs  rust_bert.rs  tei.rs
src/parser/: mod.rs  parse_ai.rs  parse_regex.rs
src/parser/parse_regex/: mod.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs  surreal.rs
src/util/: exclude.rs  handle_tei.rs  mod.rs  spinner.rs  utils.rs
tests/: integration_test.rs
vector-export-scripts/: qdrant.sh
