[package]
name = "db2vec"
version = "0.2.0"
edition = "2024"

[dependencies]
redis = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

tokio = { version = "1", features = ["full"] }
uuid =   { version = "1.16.0", features = ["v4", "rng-getrandom"] }
regex = "1.11.1"
byteorder = "1.5.0"
base64 = "0.22.1"
html2text = "0.14.3"
clap =  { version = "4", features = ["derive", "env"] }
dotenvy = "0.15.7"
log = "0.4"
env_logger = "0.11.8"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
once_cell = "1.21.3"
rayon = "1.10.0"
num_cpus = "1.16.0"
 
