[package]
name = "db2vec"
version = "0.2.0"
edition = "2024"

[dependencies]
redis = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
uuid =   { version = "1", features = ["v4", "rng-getrandom"] }
regex = "1.11"
byteorder = "1.5.0"
base64 = "0.22"
html2text = "0.14"
clap =  { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
once_cell = "1"
rayon = "1"
num_cpus = "1"
lazy_static = "1.5.0"
 
